--- a/Rooshan_Riaz_CS351L_Lab02.ipynb
+++ b/Rooshan_Riaz_CS351L_Lab02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsRuJZHpBq47mzDuNjVWBT",
+      "authorship_tag": "ABX9TyOU15NrVeoZ393OVwdMhG89",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,12 @@
       "cell_type": "markdown",
       "source": [
         "# **Lab 2: Introduction to Search in AI**\n",
-        "\n"
+        "\n",
+        "**Name: Rooshan Riaz**\n",
+        "\n",
+        "**Reg No: 2022506**\n",
+        "\n",
+        "## **Lab Task: Implementation of A* Algorithm on 2048 Game**"
       ],
       "metadata": {
         "id": "6D5doI2OcE75"
