--- a/Rooshan_Riaz_CS_351L_Lab_04.ipynb
+++ b/Rooshan_Riaz_CS_351L_Lab_04.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCOv7hkY6H8PBEXIVGZMrA",
+      "authorship_tag": "ABX9TyM31KuU2LWqSarGivR8i0u7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/rooshanriaz/CS-351L-AI-Lab-GitHub-Repository_2022506/blob/main/Rooshan_Riaz_CS_351L_Lab_04.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**k-Nearest Neighbors (k-NN):**\n",
+        "\n",
+        "The k-Nearest Neighbors (k-NN) algorithm classifies passengers based on their proximity to others in the feature space. For the Titanic dataset, it predicts survival by looking at the k closest passengers (based on features like age, fare, and class) and assigns the majority class (survived or not) from those neighbors. k-NN is simple and non-parametric, making it sensitive to the choice of features and k. It works well with normalized numerical data but can be less efficient on larger datasets."
+      ],
+      "metadata": {
+        "id": "Tg_jnME5qI4_"
+      }
     },
     {
       "cell_type": "code",
@@ -404,6 +415,17 @@
         "colorbar.set_ticklabels(['Did not Survive', 'Survived'])\n",
         "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Decision Tree:**\n",
+        "\n",
+        "The Decision Tree algorithm builds a model that splits the dataset into subsets based on feature values like age, sex, and ticket class, creating a tree of decisions that predict survival. Each split is chosen to maximize information gain, helping classify whether a passenger survived or not. It's an interpretable model, as each decision node explains how certain features impact survival. However, decision trees can be prone to overfitting unless properly tuned (e.g., using maximum depth or pruning)."
+      ],
+      "metadata": {
+        "id": "8Q3XcA9BqhcA"
+      }
     },
     {
       "cell_type": "code",
